Question Images (with text)

--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -216,19 +216,24 @@
 
             <div id = 'questionsPart2' class = 'rows'>
 
-              <label class='label hidden' onclick = 'selectAnswer(this)' for="answer1" id='answer1Label'>A</label>
+              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer1" id='answer1Label'>A</label>-->
+              <label class='label hidden' for="answer1" id='answer1Label'>A</label>
               <textarea class = 'hidden' id = 'answer1'></textarea>
 
-              <label class='label hidden' onclick = 'selectAnswer(this)' for="answer2" id='answer2Label'>B</label>
+              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer2" id='answer2Label'>B</label>-->
+              <label class='label hidden' for="answer2" id='answer2Label'>B</label>
               <textarea class = 'hidden' id = 'answer2'></textarea>
 
-              <label class='label hidden' onclick = 'selectAnswer(this)' for="answer3" id='answer3Label'>C</label>
+              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer3" id='answer3Label'>C</label>-->
+              <label class='label hidden' for="answer3" id='answer3Label'>C</label>
               <textarea class = 'hidden' id = 'answer3'></textarea>
 
-              <label class='label hidden' onclick = 'selectAnswer(this)' for="answer4" id='answer4Label'>D</label>
+              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer4" id='answer4Label'>D</label>-->
+              <label class='label hidden' for="answer4" id='answer4Label'>D</label>
               <textarea class = 'hidden' id = 'answer4'></textarea>
 
-              <label class='label hidden' onclick = 'selectAnswer(this)' for="answer5" id='answer5Label'>E</label>
+              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer5" id='answer5Label'>E</label>-->
+              <label class='label hidden' for="answer5" id='answer5Label'>E</label>
               <textarea class = 'hidden' id = 'answer5'></textarea>
 
             </div>
