--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -122,9 +122,9 @@
           <label class='label hidden' for="sectionList" id='sectionListLabel'>Section</label>
           <select class='hidden' id="sectionList">
             <option value="english">English</option>
-            <!--<option value="math">Math</option>
+            <option value="math">Math</option>
             <option value="reading">Reading</option>
-            <option value="science">Science</option>-->
+            <option value="science">Science</option>
           </select>
         </div>
       
@@ -216,24 +216,34 @@
 
             <div id = 'questionsPart2' class = 'rows'>
 
-              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer1" id='answer1Label'>A</label>-->
-              <label class='label hidden' for="answer1" id='answer1Label'>A</label>
+              <div class = 'columns' style = 'text-align: right;'>
+                <label class='label hidden' for="answer1" id='answer1Label'>A</label>
+                <input type = 'file' id = 'answer1Image' class = 'hidden' >
+              </div>
               <textarea class = 'hidden' id = 'answer1'></textarea>
 
-              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer2" id='answer2Label'>B</label>-->
-              <label class='label hidden' for="answer2" id='answer2Label'>B</label>
+              <div class = 'columns' style = 'text-align: right;'>
+                <label class='label hidden' for="answer2" id='answer2Label'>B</label>
+                <input type = 'file' id = 'answer2Image' class = 'hidden' >
+              </div>
               <textarea class = 'hidden' id = 'answer2'></textarea>
 
-              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer3" id='answer3Label'>C</label>-->
-              <label class='label hidden' for="answer3" id='answer3Label'>C</label>
+              <div class = 'columns' style = 'text-align: right;'>
+                <label class='label hidden' for="answer3" id='answer3Label'>C</label>
+                <input type = 'file' id = 'answer3Image' class = 'hidden' >
+              </div>
               <textarea class = 'hidden' id = 'answer3'></textarea>
 
-              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer4" id='answer4Label'>D</label>-->
-              <label class='label hidden' for="answer4" id='answer4Label'>D</label>
+              <div class = 'columns' style = 'text-align: right;'>
+                <label class='label hidden' for="answer4" id='answer4Label'>D</label>
+                <input type = 'file' id = 'answer4Image' class = 'hidden' >
+              </div>
               <textarea class = 'hidden' id = 'answer4'></textarea>
 
-              <!--<label class='label hidden' onclick = 'selectAnswer(this)' for="answer5" id='answer5Label'>E</label>-->
-              <label class='label hidden' for="answer5" id='answer5Label'>E</label>
+              <div class = 'columns' style = 'text-align: right;'>
+                <label class='label hidden' for="answer5" id='answer5Label'>E</label>
+                <input type = 'file' id = 'answer5Image' class = 'hidden' >
+              </div>
               <textarea class = 'hidden' id = 'answer5'></textarea>
 
             </div>
