ading new students

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -333,6 +333,7 @@
         <!-- <button id="mathProgramNav" class="button">Math Program</button>
         <button id="phonicsProgramNav" class="button">Phonics Program</button> -->
         <button id="registrationNav" class="button">Registration</button>
+        <button id="studentInfoNav" class="button">Student Info</button>
         <button id="paymentNav" class="button">Payment</button>
     </section>
 
@@ -346,6 +347,8 @@
       <div class="flex-row align-center">
         <button class="button" onclick="goToInquiry()">Inquiry</button>
         <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
+        <button class="button" onclick="window.location.href='../new-student.html'">New Student</button>
+        <button class="button" onclick="window.location.href='../new-parent.html'">New Parent</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <button class="button" onclick="goToStaffRegistration()">Add Staff</button>
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
