new parent added

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -334,6 +334,7 @@
         <button id="phonicsProgramNav" class="button">Phonics Program</button> -->
         <button id="registrationNav" class="button">Registration</button>
         <button id="studentInfoNav" class="button">Student Info</button>
+        <button id="parentInfoNav" class="button">Parent Info</button>
         <button id="paymentNav" class="button">Payment</button>
     </section>
 
@@ -349,6 +350,7 @@
         <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <button class="button" onclick="window.location.href='../new-student.html'">New Student</button>
         <button class="button" onclick="window.location.href='../new-parent.html'">New Parent</button>
+        <a href="../latex.html">latex</a>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <button class="button" onclick="goToStaffRegistration()">Add Staff</button>
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
