--- a/public/new-student.html
+++ b/public/new-student.html
@@ -32,7 +32,8 @@
   </head>
 
 
-  <body onload="initialSetup()" class="loading">
+  <body onload="initialSetup()">
+    <h1 id="title">Student</h1>
     <div id="pageLoading"></div>
     <label for="location">Location</label>
     <div class="loading-wrapper">
