--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -327,12 +327,12 @@
     <section id="navigationSection" class="add-user-section">
       <div id="navigationModal">
         <div class="close" onclick="document.getElementById('navigationSection').style.display = 'none'">X</div>
-        <h4 style="margin: 0;">Which lesson are you teaching today?</h4>
-        <button id="actNav" class="button">ACT</button>
-        <button id="subjectTutoringNav" class="button">Subject Tutoring</button>
+        <h4 style="margin: 0;">What would you like to see?</h4>
+        <!-- <button id="actNav" class="button">ACT</button> -->
+        <!-- <button id="subjectTutoringNav" class="button">Subject Tutoring</button> -->
         <!-- <button id="mathProgramNav" class="button">Math Program</button>
         <button id="phonicsProgramNav" class="button">Phonics Program</button> -->
-        <button id="registrationNav" class="button">Registration</button>
+        <!-- <button id="registrationNav" class="button">Registration</button> -->
         <button id="studentInfoNav" class="button">Student Info</button>
         <button id="parentInfoNav" class="button">Parent Info</button>
         <button id="paymentNav" class="button">Payment</button>
@@ -350,13 +350,13 @@
         <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <button class="button" onclick="window.location.href='../new-student.html'">New Student</button>
         <button class="button" onclick="window.location.href='../new-parent.html'">New Parent</button>
-        <a href="../latex.html">latex</a>
+        <button class="button" onclick="window.location.href='../new-tutor.html'">New Tutor</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
-        <button class="button" onclick="goToStaffRegistration()">Add Staff</button>
+        <!-- <button class="button" onclick="goToStaffRegistration()">Add Staff</button> -->
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
         <!-- <button class="button" onclick="openModal('secretary')">Add Secretary</button> -->
-        <button class="button" onclick="openModal('school')">Add School</button>
-        <button class="button" onclick="openModal('extracurricular')">Add Extracurricular</button>
+        <!-- <button class="button" onclick="openModal('school')">Add School</button> -->
+        <!-- <button class="button" onclick="openModal('extracurricular')">Add Extracurricular</button> -->
         <!-- <button class="button" onclick="resetPassword()">reset password</button> -->
         <a href="https://flex.twilio.com/auburn-goose-1633" target="_blank">Contact Center</a>
       </div>
