--- a/public/new-tutor.html
+++ b/public/new-tutor.html
@@ -59,6 +59,10 @@
       <option value="history">History</option>
       <option value="spanish">Spanish</option>
       <option value="french">French</option>
+      <option value="actEnglish">ACT English</option>
+      <option value="actMath">ACT Math</option>
+      <option value="actReading">ACT Reading</option>
+      <option value="actScience">ACT Science</option>
     </select>
     <p class="error">error message</p>
     <button id="action"><div class="loading-wrapper loading">Loading</div></button>
