--- a/public/index.html
+++ b/public/index.html
@@ -299,6 +299,7 @@
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="sign-up.html">Sign up</a></li>
             <li><a href="sign-in.html">Log In</a></li>
+            <li><a href="careers.html">Careers</a></li>
           </ul>
         </div>
         <div>
