chnaged submitting lessons

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -169,18 +169,6 @@
           <div class="dropdown-content">
             <select id="qualificationOpeningContent" class="ui dropdown search selection">
               <option value="" disabled selected>select qualifications</option>
-              <option value="math">Math</option>
-              <option value="physics">Physics</option>
-              <option value="chemistry">Chemistry</option>
-              <option value="biology">Biology</option>
-              <option value="english">English</option>
-              <option value="history">History</option>
-              <option value="spanish">Spanish</option>
-              <option value="french">French</option>
-              <option value="actEnglish">ACT English</option>
-              <option value="actMath">ACT Math</option>
-              <option value="actReading">ACT Reading</option>
-              <option value="actScience">ACT Science</option>
             </select>
           </div>
         </div>
@@ -553,6 +541,14 @@
         <select id="addLessonType" name="addLessonType" class="ui dropdown"></select>
         <br>
 
+        <!-- subtype of lesson -->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="This is the subtype of lesson">?</div>
+          <label for="addLessonSubtype" class="label">Subtype</label>
+        </div>
+        <select id="addLessonSubtype" name="addLessonSubtype" class="ui dropdown"></select>
+        <br>
+
         <!-- description of lesson -->
         <div class="inputRow">
           <div class="more-info " data-more-info="This is the description of lesson">?</div>
@@ -570,8 +566,8 @@
         <br>
 
         <!-- staff teaching the lesson -->
-        <div class="inputRow">
-          <div class="more-info " data-more-info="These are the staff that could possible perform this test review. One will be randomly chosen after submission.">?</div>
+        <!-- <div class="inputRow">
+          <div class="more-info " data-more-info="These are the staff that could possible perform this lesson. One will be randomly chosen after submission.">?</div>
           <label for="addLessonStaff" class="label">Staff</label>
         </div>
         <div class="ui checkbox">
@@ -579,7 +575,7 @@
           <label>Select all</label>
         </div>
         <select id="addLessonStaff" name="addLessonStaff" class="ui dropdown search selection" multiple></select>
-        <br>
+        <br> -->
 
         <!-- price of lesson -->
         <div class="inputRow">
