--- a/public/careers.html
+++ b/public/careers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Why should oyu choose Lyrn over other tutoring comapnies.">
+    <meta name="description" content="Work for us as a tutor.">
     <title>Careers</title>
 
     <script src="careers.js" defer></script>
@@ -42,8 +42,8 @@
       <section class="content">
         <p class="date">January 3, 2022</p>
         <h2>Hiring Tutors</h2>
-        <p>At Lyrn we are dedicated to providing the most advanced tutoring to our students. This cannot be acomplished without dedicated tutors who love teaching as much as they 
-          love learning. Our flexible hours make it easy for any one to join our team and start teaching. We let you completely control your own schedule to fit your chaotic colllge
+        <p>At Lyrn we are dedicated to providing the most advanced tutoring to our students. This cannot be accomplished without dedicated tutors who love teaching as much as they 
+          love learning. Our flexible hours make it easy for any one to join our team and start teaching. We let you completely control your own schedule to fit your chaotic college
           schedule. We offer both subject tutoring for all general subjects and ACT tutoring to increase student's scores. Everyone will start off tutoring in the subjects they feel
           the most comfortable in and will recieve training on some if not all of the sections in the ACT.
         </p>
