--- a/public/new-student.html
+++ b/public/new-student.html
@@ -55,6 +55,12 @@
         <option value="" disabled selected>select a parent</option>
       </select>
     </div>
+    <label for="blacklistTutors">Blacklisted Tutors</label>
+    <div class="loading-wrapper">
+      <select name="blacklistTutors" id="blacklistTutors" class="ui dropdown search" multiple>
+        <option value="" disabled selected>select a tutor</option>
+      </select>
+    </div>
     <p class="error">error message</p>
     <button id="action"><div class="loading-wrapper loading">Loading</div></button>
   </body>
