--- a/public/new-tutor.html
+++ b/public/new-tutor.html
@@ -49,6 +49,7 @@
     <input type="email" name="email" id="email" required>
     <label for="phoneNumber">Phone Number</label>
     <input type="tel" name="phoneNumber" id="phoneNumber" required>
+    <label for="qualifications">Qualifications</label>
     <div class="loading-wrapper">
       <select name="qualifications" id="qualifications" class="ui dropdown search" multiple>
         <!-- <option value="" disabled selected>select qualifications</option>
