English, Math, and Science Passages

--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -64,6 +64,7 @@
       <button class="button" onclick="window.location.href='../calendar.html'">Calendar Testing</button>
       <button class="button" onclick="openModal('location')">Add Location</button>
       <button class = "button" onclick = "window.location.href ='../testEditor.html'">Test Editor</button>
+      <button class = "button" onclick = "window.location.href ='../testEditorOld.html'">TE Old</button>
       <button class="button" onclick="signOut()">Sign Out</button>
     </div>
 
