--- a/public/calendar.html
+++ b/public/calendar.html
@@ -646,7 +646,8 @@
           <div class="more-info " data-more-info="This is/are the staff performing the lesson">?</div>
           <label for="editLessonStaff" class="label">Staff</label>
         </div>
-        <select id="editLessonStaff" name="editLessonStaff" class="ui dropdown search selection" multiple></select>
+        <!-- <select id="editLessonStaff" name="editLessonStaff" class="ui dropdown search selection" multiple></select> -->
+        <div id="editLessonStaff" name="editLessonStaff" class="input nonEditable"></div>
         <br>
 
         <!-- price of lesson -->
