new lesson system

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -130,11 +130,14 @@
             <select id="typeFilterContent" class="ui dropdown search selection" multiple>
               <option value="">select type</option>
               <option value="act">ACT</option>
+              <option value="actFundamentals">ACT Fundamentals</option>
+              <option value="actComprehensive">Comprehensive ACT</option>
               <option value="conference">Conference</option>
               <option value="generalInfo">General Info</option>
               <option value="mathProgram">Math Program</option>
               <option value="practiceTest">Practice Test</option>
               <option value="subjectTutoring">Subject Tutoring</option>
+              <option value="apExam">AP Exam</option>
               <option value="teacherMeeting">Teacher Meeting</option>
               <option value="test">Test</option>
               <option value="testReview">Test Review</option>
@@ -781,16 +784,6 @@
 
 
     </div>
-  </div>
-
-  <div id="eventGlance" class="gridContainer">
-      <div class="gridHeaderItem"></div>
-      <div class="gridHeaderItem">Student</div>
-      <div class="gridHeaderItem">Type</div>
-      <div class="gridHeaderItem">Tutor</div>
-      <div class="gridHeaderItem">Reconcile</div>
-      <div id="currentDivider" class="gridDividerItem">Current Events</div>
-      <div id="upcomingDivider" class="gridDividerItem">Upcoming Events</div>
   </div>
 
 </body>
