--- a/public/careers.html
+++ b/public/careers.html
@@ -42,33 +42,33 @@
       <section class="content">
         <p class="date">January 3, 2022</p>
         <h2>Hiring Tutors</h2>
-        <p>At Lyrn we are dedicated to providing the most advanced tutoring to our students. This cannot be accomplished without dedicated tutors who love teaching as much as they 
-          love learning. Our flexible hours make it easy for any one to join our team and start teaching. We let you completely control your own schedule to fit your chaotic college
-          schedule. We offer both subject tutoring for all general subjects and ACT tutoring to increase student's scores. Everyone will start off tutoring in the subjects they feel
+        <p>At Lyrn, we are dedicated to providing the most advanced tutoring to our students. This cannot be accomplished without dedicated tutors who love teaching as much as they 
+          love learning. Our flexible hours make it easy for anyone to join our team and start teaching. We let you completely control your own schedule to fit your chaotic college
+          schedule. We offer both subject tutoring for all general subjects and ACT tutoring. Everyone will start off tutoring in the subjects they feel
           the most comfortable in and will recieve training on some if not all of the sections in the ACT.
         </p>
         <p><strong>Benefits</strong></p>
         <ul>
-          <li><strong>Competitive Pay</strong> - Starting at $15 an hour but as you qualifiy to teach ACT section it's a 50¢ per hour increase for each section you can teach.</li>
+          <li><strong>Competitive Pay</strong> - Starting at $15 an hour plus a 50¢ per hour increase for each section of the ACT you can teach.</li>
           <li><strong>Flexible Schedule</strong> - You tell us when you can work and we will fill your schedule with lessons.</li>
-          <li><strong>Work as little or as much as you want</strong> - The minimum number of hours you msut have avaialable is 5 but the limit is up to you.</li>
+          <li><strong>Work as little or as much as you want</strong> - The minimum number of hours you must have avaialable is 5 but the limit is up to you.</li>
           <li><strong>You're in control</strong> - Change your schedule up to the day before.</li>
-          <li><strong>Online</strong> - Our entire company started online which meand you can work from anywhere.</li>
+          <li><strong>Online</strong> - Our entire company started online which means you can work from anywhere.</li>
         </ul>
-        <p><strong>Responsibiities</strong></p>
+        <p><strong>Responsibilities</strong></p>
         <ul>
           <li><strong>Professional</strong> - You will be the face of Lyrn so proffesionalism is key.</li>
-          <li><strong>Great with kids</strong> - Most of your work will be with high scholl aged kids so being able to communicate well with them is key.</li>
+          <li><strong>Great with kids</strong> - Most of your work will be with high scholl aged kids so being able to communicate well with them is crucial.</li>
           <li><strong>Knowlegdable</strong> - Must have a strong foundation in what you are teaching. You should be able to  answer the vast majority of questions your
-          students might ask. You don't need to know eveything but in the topics you are teaching you should know quite a bit.</li>
-          <li><strong>Technology</strong> - Since your job is online we require that you have at device capable of zooming students, preferable one that has a touch screen
+          students might ask. You don't need to know eveything, but in the topics you are teaching you should know quite a bit.</li>
+          <li><strong>Technology</strong> - Since your job is online, we require that you have at device capable of zooming students&mdash;preferably one that has a touch screen
             so that you can draw on your virtual whiteboard.</li>
         </ul>
 
-        <p>So what are you waiting for? Send us an email letting us know you're interested. No resume rquired. Just let us know what you are currently studying or what you studied
+        <p>So what are you waiting for? Send us an email letting us know you're interested. No resume required. Just let us know what you are currently studying or what you studied
           in college and if you have any prior tutoring experience. If you still have questions let us know. We're excited for you to join the team.
         </p>
-        <p><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></p>
+        <p><a href="mailto:careers@lyrnwithus.com">careers@lyrnwithus.com</a></p>
       </section>
 
       <section class="topics"></section>
